todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes: # Define volume
        - name: todoapp
          persistentVolumeClaim:
            claimName: todoapp-claim
        - name: todos-vol
          configMap:
            name: todos-data
            # If you omit the items array entirely, every key in the ConfigMap becomes a file with the same name as the key.
            #items:
            #- key:
            #  path:
      containers:
        - name: todoapp-frontend
          image: hinichijou/todo_app_frontend:5rabycj0
          volumeMounts: # Mount volume
            - name: todoapp
              mountPath: /app/public/images
        - name: todoapp-backend
          image: hinichijou/todo_app_backend:1b9cy2t3
          volumeMounts: # Mount volume
          - name: todos-vol
            mountPath: /app/dist/config
            readOnly: true
      securityContext:
        fsGroup: 1001
