todo_app/manifests/deployment_todoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes: # Define volume
        - name: todoapp
          persistentVolumeClaim:
            claimName: todoapp-claim
      containers:
        - name: todoapp-frontend
          image: hinichijou/todo_app_frontend:5rabycj0
          volumeMounts: # Mount volume
            - name: todoapp
              mountPath: /app/public/images
        - name: todoapp-backend
          image: hinichijou/todo_app_backend:kmn9tzv0
      securityContext:
        fsGroup: 1001
