todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: todoapp-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
