todo_app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp-frontend-svc
            port:
              number: 2345
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todoapp-backend-svc
            port:
              number: 3001
