todo_app/manifests/route_frontend.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: project
  name: todo-frontend-route
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todoapp-frontend-svc
      port: 2345
